<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fahee.chatapplication.RegisterActivity">




    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_display_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp">
        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="39dp"
            android:hint="@string/display_name"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/reg_display_name"
        android:layout_marginTop="33dp"
        >

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp">

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/reg_create_btn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/create_account"
        android:textColor="@android:color/white"
        android:layout_marginEnd="16dp"
        android:layout_below="@+id/reg_password"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_toolbar"
        android:layout_marginStart="40dp"
        android:layout_marginTop="52dp"
        android:text="Create a New Account"
        android:textColor="@android:color/black"
        android:textColorHint="@color/common_google_signin_btn_text_dark_pressed"
        android:textColorLink="@android:color/background_dark"
        android:textIsSelectable="false"
        android:textSize="24sp"/>


</RelativeLayout>
