<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fahee.chatapplication.LoginActivity">
    <include layout="@layout/app_bar_layout" android:id="@+id/login_toolbar"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_toolbar"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:text="Login to your Account"
        android:textColor="@android:color/black"
        android:textColorHint="@color/common_google_signin_btn_text_dark_pressed"
        android:textColorLink="@android:color/background_dark"
        android:textIsSelectable="false"
        android:textSize="24sp"/>



     <android.support.design.widget.TextInputLayout
      android:id="@+id/login_email"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
      android:layout_marginTop="41dp"
      android:layout_below="@+id/textView2"
      android:layout_alignParentStart="true">

         <EditText

             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:hint="@string/your_email"
             android:inputType="textEmailAddress"
             android:textColorHint="@color/colorAccent"/>
   </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_email"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp">

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:background="@color/colorPrimary"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:layout_marginEnd="17dp"
        android:layout_below="@+id/login_password"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>
